# mybootable

./: README.md
bootloader/lk/app/aboot/: aboot.c  rules.mk  ven_crc.c  ven_crc.h  ven_def.h
bootloader/lk/app/aboot/displayer/: display.h  displayer.c  displayer.h  font.c  font.h  palette.c  palette.h  sh1106.c  sh1106.h
bootloader/lk/dev/pmic/pm8x41/: pm8x41.c  pm8x41_adc.c
bootloader/lk/dev/pmic/pm8x41/include/: pm8x41.h  pm8x41_adc.h  pm8x41_hw.h
bootloader/lk/platform/mdm9640/: acpuclock.c  gpio.c  mdm9640-clock.c
bootloader/lk/platform/mdm9640/include/platform/: clock.h  gpio.h  iomap.h  irqs.h
bootloader/lk/platform/msm_shared/: qmp_usb30_phy.c  qpic_nand.c  rules.mk  shutdown_detect.c  ww_bq2415x_charge.c  ww_bq2415x_charge.h  ww_bq2415x_charger.c  ww_bq2415x_charger.h  ww_smb135x_charge.c  ww_smb135x_charge.h
bt-proprietary/bt-services/: bluetooth-5.init
bt-proprietary/bt-services/device/qcom/krypton/: Makefile.am  configure.ac
bt-proprietary/bt-services/device/qcom/krypton/wlan/: Makefile.am  hostapd-wlan1.conf  hostapd.conf  sta_mode_hostapd.conf  wlan
common/: vendorsetup.sh
common/config/: device-vendor.mk
common/ferrum/: BoardConfigVendor.mk
common/msm8226/: BoardConfigVendor.mk
common/msm8916/: BoardConfigVendor.mk
common/msm8916_32/: BoardConfigVendor.mk
common/msm8974/: BoardConfigVendor.mk
common/msm8994/: BoardConfigVendor.mk
common/scripts/: Android.mk
common/scripts/SecImage/: Notice.txt
common/scripts/SecImage/config/integration/: secimage.xml
common/scripts/SecImage/config/xsd/: secimage.xsd
common/scripts/SecImage/sectools/: __init__.py
common/scripts/SecImage/sectools/common/core/: chain.py
common/scripts/SecImage/sectools/common/crypto/: common_paths.py  openssl_binary_implementation.py  openssl_implementation_discovery.py
common/scripts/SecImage/sectools/common/parsegen/elf/: format.py
common/scripts/SecImage/sectools/common/utils/: c_base.py  c_process.py
common/scripts/SecImage/sectools/features/isc/: __init__.py  imageinfo.py  secimage.py
common/scripts/SecImage/sectools/features/isc/cfgparser/: __init__.py  auto_gen_obj_config.py  auto_gen_xml_config.py  defines.py  rule.py
common/scripts/SecImage/sectools/features/isc/parsegen/: elf.py  mbn_tools.py
common/scripts/SecImage/sectools/features/isc/parsegen/config/: auto_gen_obj_config.py  auto_gen_xml_config.py  (+2 more)
common/scripts/SecImage/sectools/features/isc/signer/: base_signer.py  certificate.py  openssl_signer.py  signer.py
common/scripts/SecImage/sectools/features/isc/stager/: meta_build_stager.py  meta_build_tmp_stager.py
data/: Makefile.am  configure.ac
data/ATFWD-daemon/: atfwd_daemon.c
data/dsi_netctrl/inc/: dsi_netctrl.h
data/dsi_netctrl/src/: dsi_config.xml  dsi_netctrl.c  dsi_netctrl_cb_thrd.c  dsi_netctrl_embms.c  dsi_netctrl_init.c  dsi_netctrl_mni.c  dsi_netctrl_mni_cb.c  dsi_netctrl_netmgr.c  dsi_netctrli.c  dsi_netctrli.h
data/dsutils/: configure.ac
data/dsutils/inc/: ds_util.h
data/dsutils/src/: ds_cmdq.c  ds_util.c
data/ipacm-diag/src/: ipacmdiag_main.c
data/ipacm-perf/inc/: ipacm_perf_rm.h
data/ipacm-perf/src/: ipacm_perf_rm.cpp
data/mobileap/client/inc/: QCMAP_Client.h  qcmap_firewall_util.h
data/mobileap/client/src/: QCMAP_Client.cpp  qcmap_cli_main.cpp
data/mobileap/eMBMS_multiclient/qmi_ip_multiclient/src/: qmi_ip.h  qmi_ip_conn_mgmt.c  qmi_ip_fpop_hdlr.c  qmi_ip_main.c  qmi_ip_msg_hdlr.c  qmi_ip_tun_mgmt.c  qmi_ip_xml.c
data/mobileap/ipc/: qualcomm_mobile_access_point_msgr_v01.c  qualcomm_mobile_access_point_msgr_v01.h
data/mobileap/server/inc/: QCMAP_Backhaul.h  QCMAP_Backhaul_Cradle.h  QCMAP_ConnectionManager.h  QCMAP_LAN.h  QCMAP_Tethering.h  QCMAP_WLAN.h  ds_qmi_qcmap_msgr.h  qcmap_cm_api.h  qcmap_firewall_util.h
data/mobileap/server/src/: Makefile.am  QCMAP_Backhaul.cpp  QCMAP_Backhaul_Cradle.cpp  QCMAP_Backhaul_WLAN.cpp  QCMAP_Backhaul_WWAN.cpp  QCMAP_ConnectionManager.cpp  QCMAP_Firewall.cpp  QCMAP_LAN.cpp  QCMAP_MediaService.cpp  QCMAP_NATALG.cpp  QCMAP_Tethering.cpp  QCMAP_WLAN.cpp  ds_qmi_qcmap_msgr.cpp  mobileap_cfg.xml  qcmap_cm.cpp  qcmap_netlink.cpp
data/mobileap/webserver/qcmap_web_client/inc/: QCMAP_Web_CLIENT.h
data/mobileap/webserver/qcmap_web_client/src/: QCMAP_Web_CLIENT.cpp
data/netmgr/inc/: netmgr.h
data/netmgr/src/: Android.min  Android.mk  Makefile.am  netmgr_client.c  netmgr_config.c  netmgr_config.h  netmgr_config.xml  netmgr_defs.h  netmgr_exec.c  netmgr_iwlan_client.cpp  netmgr_kif.c  netmgr_kif.h  netmgr_main.c  netmgr_main.h  netmgr_netlink.c  netmgr_netlink.h  netmgr_qmi.c  netmgr_qmi.h  netmgr_qmi_dfs.c  netmgr_qmi_dpm.c  netmgr_qmi_wda.h  netmgr_rmnet.c  netmgr_sm.c  netmgr_sm.stm  netmgr_sm_int.c  netmgr_sm_int.h  netmgr_tc.c  netmgr_tc.h  netmgr_util.c  netmgr_util.h
data/qdi/src/: qdi.c  qdi_netlink.c
data/qdp/inc/: qdp.h
data/qdp/src/: Makefile.am  qdp.c
data/qmi_ip/inc/: qmi_ip.h
data/qmi_ip/src/: qmi_ip.c  qmi_ip_netlink.c
data/qti/src/: Android.mk  qti.h  qti_cmdq.c  qti_main.c  qti_qcmap.c  qti_rmnet_modem.c  qti_rmnet_peripheral.c
data/radish/: radish.c
data/tests/dsi_netctrl/src/: Makefile.am  dsi_netctrl_daemon.c  dsi_netctrl_test.h  dsi_netctrl_test2.c
diag/: Makefile.am  configure.ac
diag-reboot-app/: Makefile.am  configure.ac  registerReboot.c
diag/include/: msgtgt.h
diag/mdlog/: diag_mdlog.c
diag/socket_log/: diag_socket_log.c
diag/src/: diag_lsm.c  diag_lsm_event.c  diag_lsm_event_i.h  diag_lsm_msg.c  diag_lsm_msg_i.h  diag_lsmi.h
fs-scrub-daemon/: fs-scrub-daemon.c
init_mss/: Makefile.am  configure.ac  init_mss.c
recovery/: Makefile.am  configure.ac  install.c  recovery.c  roots.c  start_recovery  ui.c
recovery/applypatch/: Makefile.am  applypatch.c
recovery/minelf/: Makefile.am  Retouch.c
recovery/minzip/: Makefile.am  Zip.c
recovery/mtdutils/: Makefile.am  flash_image.c  mtdutils.c
recovery/updater/: Makefile.am  install.c  install.h  updater.c
scripts/tools/fs_config/: Makefile.am  configure.ac
scripts/tools/releasetools/: common.py  edify_generator.py  ota_from_target_files
(+2 files in other folders)
