etcdir = ${sysconfdir}
dist_etc_DATA = hostapd.conf
dist_etc_DATA += hostapd-wlan1.conf
dist_etc_DATA += sta_mode_hostapd.conf
dist_etc_DATA += wpa_supplicant.conf
dist_etc_DATA += cld-hostapd-wlan0.sh
dist_etc_DATA += cld-hostapd-wlan1.sh

init_ddir = ${sysconfdir}/init.d
dist_init_d_SCRIPTS = wlan
